# synth-lemma-instantiations

./: Cargo.toml
crates/flux-config/src/: flags.rs  lib.rs
crates/flux-desugar/src/: lib.rs
crates/flux-driver/src/: callbacks.rs
crates/flux-driver/src/collector/: mod.rs
crates/flux-infer/src/: fixpoint_encoding.rs  infer.rs  refine_tree.rs
crates/flux-mcp/: Cargo.toml
crates/flux-mcp/src/: diagnostics.rs  flux_mcp.rs  flux_runner.rs  main.rs
crates/flux-middle/src/: fhir.rs  global_env.rs  lib.rs
crates/flux-syntax/src/: surface.rs
lib/flux-attrs-impl/src/: lib.rs
lib/flux-attrs/src/: lib.rs
lib/liquid-fixpoint/src/: constraint.rs  constraint_with_env.rs  cstr2smt2.rs  lib.rs
tests/tests/pos/synthesis/: synth01.rs
