[package]
name = "flux-mcp"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
rmcp = { version = "0.9.0", features = ["transport-io", "server", "macros"]}
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.48.0", features = ["full"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"]}

[lints]
workspace = true
